examples/kju/positive/control_flow/infinite_while.kju
fun kju():Unit{
	while(true){
	}
}