examples/kju/negative/returnChecker/never_returning.kju
fun f(): Int {while true {};}

fun kju(): Unit {}
